--- a/digisoal-landing-page.html
+++ b/digisoal-landing-page.html
@@ -56,7 +56,8 @@
 </head>
 <body>
   <header>
-    <img src="/mnt/data/DigiSoal.png" alt="DigiSoal Logo">
+    <img src="DigiSoal.png" alt="DigiSoal Logo">
+
     <h1>DigiSoal</h1>
     <p class="tagline">Empowering Africa's Digital Future in the Internet of Things</p>
   </header>
