--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
   <header>
-    <img src="/mnt/data/DigiSoal.png" alt="DigiSoal Logo">
+    <img src="DigiSoal.png" alt="DigiSoal Logo">
     <h1>DigiSoal</h1>
     <p class="tagline">Empowering Africa's Digital Future in the Internet of Things</p>
   </header>
@@ -66,7 +66,8 @@
 
     <p>From branding to full-stack development — DigiSoal is your digital partner.</p>
 
-    <a class="cta-button" href="https://github.com/YourUsername/drga-proposal/blob/main/Drga%20Website%20Proposal.pdf" target="_blank">📄 View Official Proposal</a>
+    <!-- Update the href below with the actual GitHub Pages URL or path to drga-proposal.html -->
+    <a class="cta-button" href="https://digisoal.github.io/DRGA-Website-Proposal_/drga-proposal.html" target="_blank">📄 View Official Proposal</a>
   </div>
 
   <footer>
