--- a/index.html
+++ b/index.html
@@ -1,97 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DigiSoal | Digital Ecosystems for IoT & Web</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Open Sans', sans-serif;
-      background-color: #000000;
-      color: #FFFFFF;
-      text-align: center;
-      padding: 50px 20px;
-    }
-    header img {
-      max-width: 200px;
-      margin-bottom: 20px;
-    }
-    h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.8rem;
-      color: #2E8B57;
-      margin-bottom: 10px;
-    }
-    p.tagline {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-      color: #C5B358;
-    }
-    .content {
-      max-width: 800px;
-      margin: auto;
-    }
-    .cta-button {
-      background-color: #2E8B57;
-      color: #fff;
-      padding: 15px 30px;
-      font-size: 1rem;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: 0.3s ease;
-      display: inline-block;
-      margin-top: 30px;
-      font-weight: bold;
-    }
-    .cta-button:hover {
-      background-color: #1B365D;
-    }
-    .testimonial-section {
-      margin-top: 50px;
-      padding: 30px 20px;
-      background-color: #1B365D;
-      border-radius: 8px;
-    }
-    .testimonial-section p {
-      font-style: italic;
-      font-size: 1.1rem;
-      margin-bottom: 10px;
-    }
-    .testimonial-section span {
-      font-weight: bold;
-      color: #C5B358;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 0.9rem;
-      color: #888;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DigiSoal | Digital IoT & Web Solutions</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
+    <style>
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body {
+            font-family: 'Open Sans', sans-serif;
+            background-color: #F8F9FA; /* Lighter background */
+            color: #1B365D; /* Darker text for contrast */
+            text-align: center;
+            padding: 50px 20px;
+        }
+        header {
+            margin-bottom: 40px;
+        }
+        header img {
+            max-width: 200px;
+            background-color: #FFFFFF; /* Ensures the logo background is white */
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.8rem;
+            color: #2E8B57;
+            margin-top: 20px;
+        }
+        p.tagline {
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+            color: #C5B358;
+        }
+        .content {
+            max-width: 800px;
+            margin: auto;
+            padding: 30px;
+            background-color: #FFFFFF;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+        p.intro-text {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+        .cta-button {
+            background-color: #2E8B57;
+            color: #fff;
+            padding: 15px 30px;
+            font-size: 1rem;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: 0.3s ease;
+            display: inline-block;
+            margin-top: 20px;
+            font-weight: bold;
+        }
+        .cta-button:hover {
+            background-color: #1B365D;
+        }
+        footer {
+            margin-top: 50px;
+            font-size: 0.9rem;
+            color: #888;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <img src="DigiSoal.png" alt="DigiSoal Logo">
-    <h1>DigiSoal</h1>
-    <p class="tagline">Digital Ecosystems for the Future: Websites, IoT & Cloud Solutions</p>
-  </header>
+    <header>
+        <img src="DigiSoal.png" alt="DigiSoal Logo">
+        <h1>DigiSoal</h1>
+        <p class="tagline">Digital Ecosystems for the Future: Websites, IoT & Cloud Solutions</p>
+    </header>
 
-  <div class="content">
-    <p>We build bold digital ecosystems that integrate websites, cloud hosting, smart forms, and Internet of Things (IoT) innovation. Our focus is delivering scalable, secure, and intelligent web solutions for professionals, institutions, and forward-thinking brands.</p>
+    <div class="content">
+        <p class="intro-text">We build bold digital ecosystems that integrate websites, cloud hosting, smart forms, and Internet of Things (IoT) innovation. Our focus is delivering scalable, secure, and intelligent web solutions for professionals, institutions, and forward-thinking brands.</p>
+        <p class="intro-text">From branding to full-stack development — DigiSoal is your digital partner.</p>
+        <a class="cta-button" href="https://digisoal.github.io/DRGA-Website-Proposal_/drga-proposal.html" target="_blank">Start Your Digital Journey</a>
+    </div>
 
-    <p>From branding to full-stack development — DigiSoal is your digital partner.</p>
-
-    <a class="cta-button" href="https://digisoal.github.io/DRGA-Website-Proposal_/drga-proposal.html" target="_blank">Start Your Digital Journey</a>
-
-    <div class="testimonial-section">
-      <p>"DigiSoal delivered a professional and comprehensive digital solution that exceeded our expectations. Their expertise and attention to detail were exceptional."</p>
-      <span>— Dr Gwen Ramokgopa</span>
-    </div>
-  </div>
-
-  <footer>
-    &copy; 2025 DigiSoal | Powered by MKHULO SOAL HOLDINGS PTY LTD
-  </footer>
+    <footer>
+        &copy; 2025 DigiSoal | Powered by MKHULO SOAL HOLDINGS PTY LTD
+    </footer>
 </body>
 </html>
