--- a/index.html
+++ b/index.html
@@ -3,23 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DigiSoal | Digital IoT & Web Solutions</title>
+    <title>DigiSoal | Digital Ecosystems</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #2E8B57;
+            --secondary-color: #C5B358;
+            --tertiary-color: #1B365D;
+            --background-color: #F8F9FA;
+            --text-color: #1B365D;
+        }
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body {
             font-family: 'Open Sans', sans-serif;
-            background-color: #F8F9FA; /* Lighter background */
-            color: #1B365D; /* Darker text for contrast */
+            background-color: var(--background-color);
+            color: var(--text-color);
             text-align: center;
             padding: 50px 20px;
+        }
+        .container {
+            max-width: 900px;
+            margin: auto;
         }
         header {
             margin-bottom: 40px;
         }
         header img {
             max-width: 200px;
-            background-color: #FFFFFF; /* Ensures the logo background is white */
+            background-color: #FFFFFF;
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -27,29 +38,88 @@
         h1 {
             font-family: 'Playfair Display', serif;
             font-size: 2.8rem;
-            color: #2E8B57;
+            color: var(--primary-color);
             margin-top: 20px;
+            animation: fadeIn 1.5s ease-in-out;
         }
         p.tagline {
             font-size: 1.2rem;
-            margin-bottom: 30px;
-            color: #C5B358;
+            margin-bottom: 40px;
+            color: var(--secondary-color);
+            animation: fadeIn 2s ease-in-out;
         }
-        .content {
-            max-width: 800px;
-            margin: auto;
-            padding: 30px;
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .intro-section {
             background-color: #FFFFFF;
+            padding: 40px;
             border-radius: 10px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin-bottom: 40px;
         }
         p.intro-text {
             font-size: 1.1rem;
             line-height: 1.6;
             margin-bottom: 20px;
         }
+        .services-section {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+        .service-card {
+            width: 250px;
+            height: 150px;
+            background-color: var(--tertiary-color);
+            color: white;
+            border-radius: 8px;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.5s ease;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .service-card .title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-family: 'Playfair Display', serif;
+            font-size: 1.2rem;
+            transition: all 0.5s ease;
+            white-space: nowrap;
+        }
+        .service-card .description {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            padding: 20px;
+            background-color: rgba(46, 139, 87, 0.9); /* primary-color with transparency */
+            opacity: 0;
+            transition: opacity 0.5s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            font-size: 0.9rem;
+        }
+        .service-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+        }
+        .service-card:hover .title {
+            opacity: 0;
+        }
+        .service-card:hover .description {
+            opacity: 1;
+        }
         .cta-button {
-            background-color: #2E8B57;
+            background-color: var(--primary-color);
             color: #fff;
             padding: 15px 30px;
             font-size: 1rem;
@@ -59,9 +129,16 @@
             display: inline-block;
             margin-top: 20px;
             font-weight: bold;
+            animation: pulse 2s infinite;
         }
         .cta-button:hover {
-            background-color: #1B365D;
+            background-color: var(--tertiary-color);
+            animation: none;
+        }
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
         }
         footer {
             margin-top: 50px;
@@ -71,20 +148,38 @@
     </style>
 </head>
 <body>
-    <header>
-        <img src="DigiSoal.png" alt="DigiSoal Logo">
-        <h1>DigiSoal</h1>
-        <p class="tagline">Digital Ecosystems for the Future: Websites, IoT & Cloud Solutions</p>
-    </header>
+    <div class="container">
+        <header>
+            <img src="DigiSoal.png" alt="DigiSoal Logo">
+            <h1>DigiSoal</h1>
+            <p class="tagline">Digital Ecosystems for the Future: Websites, IoT & Cloud Solutions</p>
+        </header>
 
-    <div class="content">
-        <p class="intro-text">We build bold digital ecosystems that integrate websites, cloud hosting, smart forms, and Internet of Things (IoT) innovation. Our focus is delivering scalable, secure, and intelligent web solutions for professionals, institutions, and forward-thinking brands.</p>
-        <p class="intro-text">From branding to full-stack development — DigiSoal is your digital partner.</p>
-        <a class="cta-button" href="https://digisoal.github.io/DRGA-Website-Proposal_/drga-proposal.html" target="_blank">Start Your Digital Journey</a>
+        <section class="intro-section">
+            <p class="intro-text">We build bold digital ecosystems that integrate websites, cloud hosting, smart forms, and Internet of Things (IoT) innovation. Our focus is delivering scalable, secure, and intelligent web solutions for professionals, institutions, and forward-thinking brands.</p>
+            <p class="intro-text">From branding to full-stack development — DigiSoal is your digital partner.</p>
+        </section>
+
+        <section class="services-section">
+            <div class="service-card">
+                <div class="title">Web Solutions</div>
+                <div class="description">Modern, responsive websites that are fast, secure, and built to grow with your business.</div>
+            </div>
+            <div class="service-card">
+                <div class="title">IoT Innovation</div>
+                <div class="description">Intelligent, interconnected solutions that connect your physical world to the digital realm.</div>
+            </div>
+            <div class="service-card">
+                <div class="title">Cloud & Hosting</div>
+                <div class="description">Reliable, scalable hosting and cloud services to power your digital presence seamlessly.</div>
+            </div>
+        </section>
+
+        <a class="cta-button" href="https://digisoal.github.io/DRGA-Website-Proposal_/drga-proposal.html" target="_blank">View Our Official Proposal</a>
+
+        <footer>
+            &copy; 2025 DigiSoal | Powered by MKHULO SOAL HOLDINGS PTY LTD
+        </footer>
     </div>
-
-    <footer>
-        &copy; 2025 DigiSoal | Powered by MKHULO SOAL HOLDINGS PTY LTD
-    </footer>
 </body>
 </html>
