--- a/drga-proposal.html
+++ b/drga-proposal.html
@@ -214,24 +214,33 @@
             </div>
         </section>
 
-        <section class="accordion-item">
-            <div class="accordion-title">Payment & SLA Terms</div>
-            <div class="accordion-content">
-                <h3>Payment Terms</h3>
-                <ul>
-                    <li><strong>50% Deposit:</strong> R 9,250 is due upon signing this proposal to begin the project.</li>
-                    <li><strong>50% Final Payment:</strong> R 9,250 is due upon project completion and before the final website launch.</li>
-                    <li><strong>Monthly Subscription:</strong> The first monthly payment of R 1,300 is due on the date of launch and on the same day each month thereafter.</li>
-                </ul>
-                <h3>Service Level Agreement (SLA)</h3>
-                <p>This proposal includes a standard SLA covering:</p>
-                <ul>
-                    <li>Guaranteed 99.9% uptime for hosting services.</li>
-                    <li>Monthly security updates and backups.</li>
-                    <li>A dedicated support contact for technical issues.</li>
-                </ul>
-            </div>
-        </section>
+       <section class="accordion-item">
+    <div class="accordion-title">Payment & SLA Terms</div>
+    <div class="accordion-content">
+        <h3>Payment Terms</h3>
+        <p>Payments will be split into a one-time project fee and a recurring monthly subscription.</p>
+        <ul>
+            <li><strong>50% Deposit:</strong> R 9,250 is due upon signing this proposal to begin the project.</li>
+            <li><strong>50% Final Payment:</strong> R 9,250 is due upon project completion and before the final website launch.</li>
+            <li><strong>Monthly Subscription:</strong> The first monthly payment of R 1,300 is due on the date of launch and on the same day each month thereafter.</li>
+        </ul>
+
+        <h3>Accepted Payment Methods</h3>
+        <ul>
+            <li><strong>EFT/Bank Transfer:</strong> Bank details will be provided on your invoice.</li>
+            <li><strong>Recurring Billing:</strong> For your convenience, monthly subscription fees can be automated via a recurring debit order.</li>
+        </ul>
+        <p><strong>Cancellation Policy:</strong> You may cancel your recurring subscription at any time by providing 30 days' written notice.</p>
+
+        <h3>Service Level Agreement (SLA)</h3>
+        <p>This proposal includes a standard SLA covering:</p>
+        <ul>
+            <li>Guaranteed 99.9% uptime for hosting services.</li>
+            <li>Monthly security updates and backups.</li>
+            <li>A dedicated support contact for technical issues.</li>
+        </ul>
+    </div>
+</section>
         
         <section id="smart-contract">
             <h2>Acceptance & Smart Contract</h2>
