--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DigiSoal | Digital Ecosystems</title>
+    <meta property="og:title" content="DigiSoal | Digital Ecosystems for the Future" />
+<meta property="og:description" content="We build bold digital ecosystems that integrate websites, cloud hosting, smart forms, and Internet of Things (IoT) innovation." />
+<meta property="og:image" content="https://digisoal.github.io/DRGA-Website-Proposal_/DigiSoal.png" />
+<meta property="og:url" content="https://digisoal.github.io/DRGA-Website-Proposal_/" />
+<meta property="og:type" content="website" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
     <style>
         :root {
