--- a/drga-proposal.html
+++ b/drga-proposal.html
@@ -225,7 +225,7 @@
                     <h3 style="font-size: 1.5em; color: #1B365D; margin-bottom: 0.5rem; font-family: 'Playfair Display', serif;">Competitor Analysis: Health Focus South Africa</h3>
                     <p style="margin-bottom: 1rem;">The website for Health Focus South Africa (<strong>health-focus.co.za</strong>) provides a clear and professional online presence. It is a good example of a functional, content-rich site in the healthcare consulting sector, featuring a blog and projects section to highlight their work. The site has a clean design and a straightforward navigation menu, making it easy for visitors to find information.</p>
                     <div style="padding: 1rem; background-color: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); overflow: hidden;">
-                        <img src="https://storage.googleapis.com/gemini-prod/images/Screenshot%202025-08-03%20105830.png" alt="Screenshot of Health Focus South Africa website homepage with a large hero image" style="width: 100%; height: auto; border-radius: 8px;">
+                        <img src="health-focus-screenshot.png" alt="Screenshot of Health Focus South Africa website homepage with a large hero image" style="width: 100%; height: auto; border-radius: 8px;">
                     </div>
                 </div>
 
@@ -233,7 +233,7 @@
                     <h3 style="font-size: 1.5em; color: #1B365D; margin-bottom: 0.5rem; font-family: 'Playfair Display', serif;">Foundation Analysis: Mobile Health Clinics Foundation</h3>
                     <p style="margin-bottom: 1rem;">The Mobile Health Clinics Foundation website (<strong>mobilehealthclinics.org.za</strong>) offers a clear and focused mission statement. The site effectively uses calls-to-action to engage visitors, such as a "GET INVOLVED" section that outlines ways to contribute. It has a clean layout and puts its purpose at the forefront, which is a strong model for an NGO's digital presence.</p>
                     <div style="padding: 1rem; background-color: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); overflow: hidden;">
-                        <img src="https://storage.googleapis.com/gemini-prod/images/Screenshot%202025-08-03%20105308.png" alt="Screenshot of Mobile Health Clinics Foundation website 'Get Involved' page" style="width: 100%; height: auto; border-radius: 8px;">
+                        <img src="mobile-health-screenshot.png" alt="Screenshot of Mobile Health Clinics Foundation website 'Get Involved' page" style="width: 100%; height: auto; border-radius: 8px;">
                     </div>
                 </div>
 
