--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
         </section>
 
-        <a class="cta-button" href="https://digisoal.github.io/DRGA-Website-Proposal_/drga-proposal.html" target="_blank">View Our Official Proposal</a>
+        <a class="cta-button" href="drga-proposal.html">View Our Official Proposal</a>
     </div>
 
     <section class="contact-section">
